GetMember, dialer refactor
